# ebustl-utils

./: .gitignore  Dockerfile  README.md  dev.py  pyproject.toml  requirements.txt
ebustl_utils/: __init__.py  helpers.py  models.py  stl_helpers.py
ebustl_utils/STLExtractor/: STLExtractor.py  __init__.py  decoder.py  helpers.py
ebustl_utils/STLReader/: STLReader.py  STLValidationWarning.py  __init__.py  decoder.py  helpers.py
ebustl_utils/STLReader/parsers/: gsi_parser.py  tti_blocks_parser.py  tti_parser.py
tests/: helpers_for_testing.py  test_gsi_parser.py  test_helpers.py  test_stl_extractor.py  test_stl_extractor_decoder.py  test_stl_extractor_helpers.py  test_stl_reader.py  test_stl_reader_decoder.py  test_stl_reader_helpers.py  test_tti_blocks_parser.py
